listing-overflow-fixed

--- a/resources/assets/website/sass/listing/listing_sidebar.scss
+++ b/resources/assets/website/sass/listing/listing_sidebar.scss
@@ -20,7 +20,7 @@
 .search--right--section{
     position: absolute;
     top:358px;
-    right: 0;
+    right:29px;
     display: block;
     z-index:8;
     color: $white;
